Support for imports in compiled module