@@ -22,8 +22,13 @@ java {
     }
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add('--enable-preview')
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
 
 application {
